--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vue-youtube": "^1.4.0",
+    "vue2-smooth-scroll": "^1.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
