--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.12",
+    "vue-aos": "^1.1.0",
     "vue-router": "^3.5.1",
     "vue-youtube": "^1.4.0",
     "vue2-smooth-scroll": "^1.5.0"
