--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "vue": "^2.6.12",
     "vue-aos": "^1.1.0",
     "vue-router": "^3.5.1",
-    "vue-youtube": "^1.4.0",
-    "vue2-smooth-scroll": "^1.5.0"
+    "vue-youtube": "^1.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
