fixed project description and wave background

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -108,7 +108,7 @@
       "School project"
     ],
     "company": "Fontys",
-    "description": "FeedMe is an order webapp for restaurants with the posibility to order food in a tinder way. The app is made as an PWA to make it easy accessible on your phone.",
+    "description": "FeedMe is an order webapp for restaurants with the possibility to order food in a tinder way. The app is made as an PWA to make it easy accessible on your phone.",
     "skills": [
       "HTML",
       "CSS",
