--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "docker": "docker build . -t app && docker run -d -p 8080:8080 app"
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.2",
+    "contentful": "^8.3.7",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.12",
     "vue-aos": "^1.1.0",
+    "vue-contentful-api": "^1.0.6",
     "vue-router": "^3.5.1",
     "vue-youtube": "^1.4.0"
   },
